# docket-mind

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
.claude/skills/docketmind-testing/: SKILL.md
.cursor/rules/: command-registration.mdc  commenting-standards.mdc  pydantic-hygiene.mdc
alembic/: env.py
alembic/versions/: 57e40cc5d20e_add_unique_constraint_to_docket_entry_.py  a1b2c3d4e5f6_remove_case_memory_text.py  b2c3d4e5f6a7_remove_case_court.py  fd958aed1db8_initial.py
docketmind/: __init__.py  __main__.py  bot.py  chat.py  commands.py  config.py  configure.py  cooldown.py  db.py  index.py  ingest.py  models.py  prompts.py  schedule.py  store.py
docketmind/commands/: __init__.py  ask.py  cases.py
docketmind/ingestion/: __init__.py  downloader.py  indexer.py  memory.py  pipeline.py  rss.py  scheduler.py
docs/superpowers/plans/: 2026-04-11-ingestion.md  2026-04-14-commands-package.md
docs/superpowers/specs/: 2026-04-11-ingestion-design.md  2026-04-14-commands-package-design.md
tests/: conftest.py  test_models.py  test_prompts.py
tests/bot/: test_bot.py  test_command_decorator.py  test_commands.py  test_slack.py
tests/ingest/: test_downloader.py  test_indexer.py  test_pipeline.py  test_rss.py  test_scheduler.py
tests/ingestion/: test_downloader.py  test_indexer.py  test_memory.py  test_pipeline.py  test_rss.py  test_scheduler.py
