[project]
name = "docketmind"
version = "0.1.0"
description = "AI-powered legal docket assistant Discord bot"
requires-python = ">=3.13"
dependencies = [
    "discord.py>=2.3",
    "openai>=1.0",
    "llama-index-core>=0.12",
    "llama-index-llms-openai>=0.3",
    "llama-index-embeddings-openai>=0.3",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "aiofiles>=24.0",
    "apscheduler>=3.10",
    "stamina>=24.2",
    "loguru>=0.7",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "pytest-mock>=3.14",
    "factory-boy>=3.3",
    "pre-commit>=4.0",
    "pytest-env>=1.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["docketmind"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = [
    "DISCORD_BOT_TOKEN=test-discord-token",
    "LLM_API_KEY=test-llm-key",
    "LLM_PROVIDER=mock",
    "EMBED_PROVIDER=mock",
]

[tool.coverage.run]
source = ["docketmind"]
omit = ["tests/*"]
